--- a/app/components/navbar/template.hbs
+++ b/app/components/navbar/template.hbs
@@ -1,5 +1,6 @@
 <nav class='navbar navbar-expand-lg navbar-light bg-light'>
-  <a class='navbar-brand' href='#'>Navbar</a>
+  <LinkTo class='navbar-brand' @route='index'>Navbar</LinkTo>
+
   <button
     class='navbar-toggler'
     type='button'
