--- a/app/users/template.hbs
+++ b/app/users/template.hbs
@@ -1,25 +1,5 @@
 {{page-title 'Users'}}
 <Header>users</Header>
+<Users::List @model={{this.model}} />
 
-<table class='table table-striped'>
-  <thead>
-    <tr>
-      <th scope='col'>ID</th>
-      <th scope='col'>Username</th>
-      <th scope='col'>Password</th>
-      <th scope='col'>email</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each this.model as |user|}}
-
-      <tr>
-        <td>{{user.id}}</td>
-        <td>{{user.username}}</td>
-        <td>{{user.password}}</td>
-        <td>{{user.email}}</td>
-      </tr>
-    {{/each}}
-  </tbody>
-</table>
 {{outlet}}
