--- a/app/components/posts/list/item/template.hbs
+++ b/app/components/posts/list/item/template.hbs
@@ -2,8 +2,8 @@
   <div class='card-body'>
     <h5 class='card-title'>{{@post.title}}</h5>
     <h6 class='card-subtitle mb-2 text-muted'>
-      Authot's ID:
-      {{@post.ownerId}}</h6>
+      Owner:
+      {{@post.owner.username}}</h6>
     <p class='card-text'>{{@post.body}}</p>
     <a href='#' class='card-link'>Like</a>
     <a href='#' class='card-link'>Dislike</a>
