--- a/app/components/users/list/template.hbs
+++ b/app/components/users/list/template.hbs
@@ -9,10 +9,12 @@
   </thead>
   <tbody>
     {{#each @model as |user|}}
-
       <tr>
         <td>{{user.id}}</td>
-        <td>{{user.username}}</td>
+        <td><LinkTo
+            @route='user.show'
+            @model={{user}}
+          >{{user.username}}</LinkTo></td>
         <td>{{user.password}}</td>
         <td>{{user.email}}</td>
       </tr>
