--- a/app/components/users/list/template.hbs
+++ b/app/components/users/list/template.hbs
@@ -11,10 +11,11 @@
     {{#each @model as |user|}}
       <tr>
         <td>{{user.id}}</td>
-        <td><LinkTo
-            @route='user.show'
-            @model={{user}}
-          >{{user.username}}</LinkTo></td>
+        <td>
+          <LinkTo @route='user.show' @model={{user}}>
+            {{user.username}}
+          </LinkTo>
+        </td>
         <td>{{user.password}}</td>
         <td>{{user.email}}</td>
       </tr>
