--- a/app/post/show/template.hbs
+++ b/app/post/show/template.hbs
@@ -1,3 +1,15 @@
 {{page-title 'Show'}}
 <Header>post</Header>
-{{outlet}}
+
+<div class='card mx-auto'>
+  <div class='card-header'>
+    {{this.model.owner.username}}
+  </div>
+  <div class='card-body'>
+    <blockquote class='blockquote mb-0'>
+      <p>{{this.model.title}}</p>
+      <footer class='blockquote-footer'>{{this.model.body}}
+      </footer>
+    </blockquote>
+  </div>
+</div>
