--- a/app/user/show/template.hbs
+++ b/app/user/show/template.hbs
@@ -1,20 +1,6 @@
 {{page-title 'Show'}}
 <Header>user description</Header>
 
-{{! template-lint-disable no-inline-styles }}
-<div class='card mx-auto' style='width: 18rem;'>
-  <img src={{this.model.photoURL}} class='card-img-top' alt='owner' />
-  <div class='card-body'>
-    <h5 class='card-title'>{{this.model.username}}</h5>
-  </div>
-  <ul class='list-group list-group-flush'>
-    <li class='list-group-item'>{{this.model.id}}</li>
-    <li class='list-group-item'>{{this.model.email}}</li>
-    <li class='list-group-item'>{{this.model.password}}</li>
-  </ul>
-  <div class='card-body'>
-    <a href='#' class='card-link'>Card link</a>
-    <a href='#' class='card-link'>Another link</a>
-  </div>
-</div>
-<Posts::List @posts={{this.model.posts}} />
+<User::Details @user={{this.model}} />
+
+{{! 5-19 linia wrzucić w komponent o nazwie  }}
