add button login

--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -23,5 +23,8 @@
       />
     </div>
   </div>
+  <div class='mb-3 row'>
+    <button type='button' class='btn btn-primary'>ZALOGUJ</button>
+  </div>
 </div>
 {{outlet}}
