--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,30 +1,38 @@
 {{page-title 'Login'}}
 
 <div class='container'>
-  <div class='mb-3 row'>
-    <label for='staticEmail' class='col-sm-2 col-form-label'>Email</label>
-    <div class='col-sm-10'>
-      <input
-        type='text'
-        class='form-control'
-        id='staticEmail'
-        placeholder='email@example.com'
-      />
+  <form {{on 'submit' this.onSubmit}}>
+    <div class='mb-3 row'>
+      <label for='username' class='col-sm-2 col-form-label'>Username</label>
+      <div class='col-sm-10'>
+        <input
+          type='text'
+          class='form-control'
+          id='username'
+          placeholder='username'
+          {{on 'input' this.onLoginChange}}
+        />
+      </div>
     </div>
-  </div>
-  <div class='mb-3 row'>
-    <label for='inputPassword' class='col-sm-2 col-form-label'>Password</label>
-    <div class='col-sm-10'>
-      <input
-        type='password'
-        class='form-control'
-        id='inputPassword'
-        placeholder='password'
-      />
+    <div class='mb-3 row'>
+      <label
+        for='inputPassword'
+        class='col-sm-2 col-form-label'
+      >Password</label>
+      <div class='col-sm-10'>
+        <input
+          type='password'
+          class='form-control'
+          id='inputPassword'
+          placeholder='password'
+          {{on 'input' this.onPasswordChange}}
+        />
+      </div>
     </div>
-  </div>
-  <div class='mb-3 row'>
-    <button type='button' class='btn btn-primary'>ZALOGUJ</button>
-  </div>
+    <div class='mb-3 row'>
+      <button type='submit' class='btn btn-primary'>ZALOGUJ</button>
+    </div>
+  </form>
 </div>
+
 {{outlet}}
