--- a/app/components/navbar/template.hbs
+++ b/app/components/navbar/template.hbs
@@ -26,7 +26,11 @@
         <LinkTo class='nav-link' @route='home.settings'>Settings</LinkTo>
       </li>
       <li class='nav-item'>
-        <a class='nav-link disabled' href='#'>login</a>
+        <span
+          role='button'
+          class='nav-link'
+          {{on 'click' this.onLogout}}
+        >logout</span>
       </li>
     </ul>
   </div>
