--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -33,6 +33,9 @@
       <button type='submit' class='btn btn-primary'>ZALOGUJ</button>
     </div>
   </form>
+  <div>
+    <span>Nie mam konta. </span><LinkTo @route='register'>Zarejestruj</LinkTo>
+  </div>
 </div>
 
 {{outlet}}
