--- a/app/register/template.hbs
+++ b/app/register/template.hbs
@@ -1,2 +1,68 @@
-{{page-title "Register"}}
+{{page-title 'Register'}}
+<Header>Register</Header>
+
+<div class='container'>
+  <form {{on 'submit' this.onSubmit}}>
+    <div class='mb-3 row'>
+      <label for='username' class='col-sm-2 col-form-label'>Username</label>
+      <div class='col-sm-10'>
+        <input
+          type='text'
+          class='form-control'
+          id='username'
+          placeholder='username'
+          {{on 'input' this.onUsernameChange}}
+        />
+      </div>
+    </div>
+    <div class='mb-3 row'>
+      <label for='username' class='col-sm-2 col-form-label'>Email</label>
+      <div class='col-sm-10'>
+        <input
+          type='text'
+          class='form-control'
+          id='email'
+          placeholder='email'
+          {{on 'input' this.onEmailChange}}
+        />
+      </div>
+    </div>
+    <div class='mb-3 row'>
+      <label for='username' class='col-sm-2 col-form-label'>PhotoURL</label>
+      <div class='col-sm-10'>
+        <input
+          type='text'
+          class='form-control'
+          id='photoURL'
+          placeholder='photoURL'
+          {{on 'input' this.onPhotoURLChange}}
+        />
+      </div>
+    </div>
+    <div class='mb-3 row'>
+      <label
+        for='inputPassword'
+        class='col-sm-2 col-form-label'
+      >Password</label>
+      <div class='col-sm-10'>
+        <input
+          type='password'
+          class='form-control'
+          id='inputPassword'
+          placeholder='password'
+          {{on 'input' this.onPasswordChange}}
+        />
+      </div>
+    </div>
+    <div class='mb-3 row'>
+      <button type='submit' class='btn btn-primary'>ZAREJESTRUJ</button>
+    </div>
+  </form>
+  <div>
+  </div>
+  <div>
+    <span>Mam już konto. </span><LinkTo @route='login'>Zaloguj</LinkTo>
+  </div>
+</div>
+
 {{outlet}}
