--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,6 +1,6 @@
 {{page-title 'Login'}}
 
-<div class='container'>
+><div class='container'>
   <form {{on 'submit' this.onSubmit}}>
     <div class='mb-3 row'>
       <label for='username' class='col-sm-2 col-form-label'>Username</label>
