--- a/app/components/posts/list/item/template.hbs
+++ b/app/components/posts/list/item/template.hbs
@@ -9,8 +9,11 @@
       Owner:
       {{@post.owner.username}}</h6>
     <p class='card-text'>{{@post.body}}</p>
-    <a href='#' class='card-link'>Like</a>
-    <a href='#' class='card-link'>Dislike</a>
+    {{#if this.isAlreadyLikedByCurrenUser}}
+      <a href='#' class='card-link'>Dislike ({{@post.likes.length}})</a>
+    {{else}}
+      <a href='#' class='card-link'>Like ({{@post.likes.length}})</a>
+    {{/if}}
     <a href='#' class='card-link'>Delete</a>
   </div>
 </div>
