--- a/app/components/posts/list/item/template.hbs
+++ b/app/components/posts/list/item/template.hbs
@@ -10,9 +10,9 @@
       {{@post.owner.username}}</h6>
     <p class='card-text'>{{@post.body}}</p>
     {{#if this.isAlreadyLikedByCurrenUser}}
-      <a href='#' class='card-link'>Dislike ({{@post.likes.length}})</a>
+      <a href='#' class='card-link' {{on 'click' this.onDislike}}>Dislike ({{@post.likes.length}})</a>
     {{else}}
-      <a href='#' class='card-link'>Like ({{@post.likes.length}})</a>
+      <a href='#' class='card-link' {{on 'click' this.onLike}}>Like ({{@post.likes.length}})</a>
     {{/if}}
     <a href='#' class='card-link'>Delete</a>
   </div>
