add compomemt who like tooltip

--- a/app/components/posts/list/item/template.hbs
+++ b/app/components/posts/list/item/template.hbs
@@ -9,28 +9,6 @@
       Owner:
       {{@post.owner.username}}</h6>
     <p class='card-text'>{{@post.body}}</p>
-    {{#if this.isAlreadyLikedByCurrenUser}}
-
-      <a href='#' class='card-link' {{on 'click' this.onDislike}}>Dislike ({{@post.likes.length}})
-         <EmberTooltip  @side="auto">
-         {{#each @post.likes as |like|}}
-         {{like.user.username}}
-         {{/each}}
-        </EmberTooltip>
-      </a>
-
-    {{else}}
-      <a href='#' class='card-link' {{on 'click' this.onLike}}>Like ({{@post.likes.length}})
-            {{#if @post.likes.length }}
-
-         <EmberTooltip  @side="auto">
-         {{#each @post.likes as |like|}}
-         {{like.user.username}}
-         {{/each}}
-        </EmberTooltip>
-    {{/if}}
-        </a>
-      {{/if}}
-    <a href='#' class='card-link'>Delete</a>
+    <Posts::List::Item::Actions @post={{@post}} />
   </div>
 </div>
