add link to profile person who like posts

--- a/app/components/posts/list/item/actions/who-likes-tooltip/template.hbs
+++ b/app/components/posts/list/item/actions/who-likes-tooltip/template.hbs
@@ -1,7 +1,11 @@
 {{#if @post.likes.length}}
-  <EmberTooltip @side='auto'>
+  <EmberPopover @side='bottom'>
     {{#each @post.likes as |like|}}
-      {{like.user.username}}
+      <LinkTo
+        @route='home.user.show'
+        @model={{like.user}}
+      >{{like.user.username}}
+      </LinkTo>
     {{/each}}
-  </EmberTooltip>
+  </EmberPopover>
 {{/if}}
