--- a/app/components/navbar/template.hbs
+++ b/app/components/navbar/template.hbs
@@ -1,37 +1,39 @@
 <nav class='navbar navbar-expand-lg navbar-light bg-light'>
-  <LinkTo class='navbar-brand' @route='home.index'>Navbar</LinkTo>
 
-  <button
-    class='navbar-toggler'
-    type='button'
-    data-toggle='collapse'
-    data-target='#navbarNav'
-    aria-controls='navbarNav'
-    aria-expanded='false'
-    aria-label='Toggle navigation'
-  >
-    <span class='navbar-toggler-icon'></span>
-  </button>
-  <div class='collapse navbar-collapse' id='navbarNav'>
-    <ul class='navbar-nav'>
-      <li class='nav-item active'>
-      </li>
-      <li class='nav-item'>
-        <LinkTo class='nav-link' @route='home.posts'>Posts</LinkTo>
-      </li>
-      <li class='nav-item'>
-        <LinkTo class='nav-link' @route='home.users'>Users</LinkTo>
-      </li>
-      <li class='nav-item'>
-        <LinkTo class='nav-link' @route='home.settings'>Settings</LinkTo>
-      </li>
-      <li class='nav-item'>
-        <span
-          role='button'
-          class='nav-link'
-          {{on 'click' this.onLogout}}
-        >logout</span>
-      </li>
-    </ul>
+  <div class='container'>
+    <LinkTo class='navbar-brand' @route='home.index'>Navbar</LinkTo>
+    <button
+      class='navbar-toggler'
+      type='button'
+      data-toggle='collapse'
+      data-target='#navbarNav'
+      aria-controls='navbarNav'
+      aria-expanded='false'
+      aria-label='Toggle navigation'
+    >
+      <span class='navbar-toggler-icon'></span>
+    </button>
+    <div class='collapse navbar-collapse' id='navbarNav'>
+      <ul class='navbar-nav'>
+        <li class='nav-item active'>
+        </li>
+        <li class='nav-item'>
+          <LinkTo class='nav-link' @route='home.posts'>Posts</LinkTo>
+        </li>
+        <li class='nav-item'>
+          <LinkTo class='nav-link' @route='home.users'>Users</LinkTo>
+        </li>
+        <li class='nav-item'>
+          <LinkTo class='nav-link' @route='home.settings'>Settings</LinkTo>
+        </li>
+        <li class='nav-item'>
+          <span
+            role='button'
+            class='nav-link'
+            {{on 'click' this.onLogout}}
+          >logout</span>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
