add function to prevent before input post with empty fields

--- a/app/components/post/create/modal/template.hbs
+++ b/app/components/post/create/modal/template.hbs
@@ -7,11 +7,21 @@
       <div class='modal-body'>
         <div class='mb-3'>
           <label for='postTitle' class='form-label'>Title</label>
-          <input type='email' class='form-control' id='postTitle' />
+          <input
+            type='email'
+            class='form-control'
+            id='postTitle'
+            {{on 'input' @onTitleChange}}
+          />
         </div>
         <div class='mb-3'>
           <label for='postContent' class='form-label'>Content</label>
-          <textarea class='form-control' id='postContent' rows='3'></textarea>
+          <textarea
+            class='form-control'
+            id='postContent'
+            rows='3'
+            {{on 'input' @onContentChange}}
+          ></textarea>
         </div>
       </div>
       <div class='modal-footer'>
@@ -20,7 +30,11 @@
           class='btn btn-danger'
           {{on 'click' @onClose}}
         >Cancel</button>
-        <button type='button' class='btn btn-success'>Create post</button>
+        <button
+          type='button'
+          class='btn btn-success'
+          {{on 'click' @onSaveChange}}
+        >Create post</button>
       </div>
     </div>
   </div>
