--- a/app/components/post/create/template.hbs
+++ b/app/components/post/create/template.hbs
@@ -6,6 +6,9 @@
 
 {{#if this.isShowCreateModal}}
   <Post::Create::Modal
+    @title={{this.title}}
+    @content={{this.content}}
+    @hasEmptyField={{this.hasEmptyField}}
     @onTitleChange={{this.onTitleChange}}
     @onContentChange={{this.onContentChange}}
     @onClose={{this.onHideModal}}
