show post with created day

--- a/app/components/posts/list/item/template.hbs
+++ b/app/components/posts/list/item/template.hbs
@@ -1,6 +1,8 @@
 <div class='card'>
   <div class='card-body'>
     <h5 class='card-title'>
+      <h6 class='card-subtitle mb-2 text-muted'>CreatedAt:
+        {{@post.fullDate}}</h6>
       <LinkTo @route='home.post.show' @model={{@post}}>
         {{@post.title}}
       </LinkTo>
