instal pickaday and moment

--- a/app/components/posts/list/item/template.hbs
+++ b/app/components/posts/list/item/template.hbs
@@ -2,7 +2,7 @@
   <div class='card-body'>
     <h5 class='card-title'>
       <h6 class='card-subtitle mb-2 text-muted'>CreatedAt:
-        {{@post.fullDate}}</h6>
+        {{moment-format @post.createdAt 'DD-MM-YYYY HH:mm'}}</h6>
       <LinkTo @route='home.post.show' @model={{@post}}>
         {{@post.title}}
       </LinkTo>
