fix problem with filter from and to

--- a/app/components/posts/list/item/actions/template.hbs
+++ b/app/components/posts/list/item/actions/template.hbs
@@ -1,15 +1,26 @@
 {{#if this.isAlreadyLikedByCurrentUser}}
-  <a href='#' class='card-link' {{on 'click' this.onDislike}}>
+  <button
+    type='button'
+    class='card-link btn btn-link'
+    {{on 'click' this.onDislike}}
+  >
     Dislike ({{@post.likes.length}})
     <Posts::List::Item::Actions::WhoLikesTooltip @post={{@post}} />
-  </a>
+  </button>
 {{else}}
-  <a href='#' class='card-link' {{on 'click' this.onLike}}>
+  <button
+    type='button'
+    class='card-link btn btn-link'
+    {{on 'click' this.onLike}}
+  >
     Like ({{@post.likes.length}})
     <Posts::List::Item::Actions::WhoLikesTooltip @post={{@post}} />
-  </a>
+  </button>
 {{/if}}
 
 {{#if this.isCreatedByCurrentUser}}
-  <a href='#' class='card-link' {{on 'click' this.onDelete}}>Delete</a>
-{{/if}}
+  <button
+    type='button'
+    class='card-link btn btn-link'
+    {{on 'click' this.onDelete}}
+  >Delete</button>{{/if}}
