add field to search by user

--- a/app/home/posts/template.hbs
+++ b/app/home/posts/template.hbs
@@ -1,35 +1,48 @@
 {{page-title 'Posts'}}
 <Header>Posts</Header>
 
-<label>
-  Start date:
-  <PikadayInput
-    @maxDate={{this.maxDate}}
-    @format='YYYY-MM-DD'
-    @value={{this.dateFrom}}
-    @onSelection={{this.onStartDateChange}}
-  />
-</label>
-<label>
-  End date:
-  <PikadayInput
-    @minDate={{this.minDate}}
-    @format='YYYY-MM-DD'
-    @value={{this.dateTo}}
-    @onSelection={{this.onEndDateChange}}
-  />
-</label>
-<button
-  type='button'
-  class='btn btn-danger'
-  {{on 'click' this.clearFilters}}
->Clear</button>
+<div class='d-flex justify-content-between'>
+  <PowerSelectMultiple
+    class='flex-fill'
+    @searchField='username'
+    @selected={{this.selectedAuthors}}
+    @options={{this.authors}}
+    @onChange={{this.chooseAuthors}}
+    as |author|
+  >
+    {{author.username}}
+  </PowerSelectMultiple>
 
-<button
-  type='button'
-  class='btn btn-secondary'
-  {{on 'click' this.onSortToggle}}
->sort{{this.sortLabel}}</button>
+  <label>
+    Start date:
+    <PikadayInput
+      @maxDate={{this.maxDate}}
+      @format='YYYY-MM-DD'
+      @value={{this.dateFrom}}
+      @onSelection={{this.onStartDateChange}}
+    />
+  </label>
+  <label>
+    End date:
+    <PikadayInput
+      @minDate={{this.minDate}}
+      @format='YYYY-MM-DD'
+      @value={{this.dateTo}}
+      @onSelection={{this.onEndDateChange}}
+    />
+  </label>
+  <button
+    type='button'
+    class='btn btn-danger'
+    {{on 'click' this.clearFilters}}
+  >Clear</button>
+
+  <button
+    type='button'
+    class='btn btn-secondary'
+    {{on 'click' this.onSortToggle}}
+  >sort{{this.sortLabel}}</button>
+</div>
 
 <Posts::List @posts={{this.sortedPosts}} />
 <Post::Create />
