--- a/app/home/posts/template.hbs
+++ b/app/home/posts/template.hbs
@@ -2,16 +2,12 @@
 <Header>Posts</Header>
 
 <div class='d-flex justify-content-between'>
-  <PowerSelectMultiple
-    class='flex-fill'
-    @searchField='username'
+  <Shared::UserSelector
+    @multipleType='true'
     @selected={{this.selectedAuthors}}
-    @options={{this.authors}}
     @onChange={{this.chooseAuthors}}
-    as |author|
-  >
-    {{author.username}}
-  </PowerSelectMultiple>
+    @options={{this.options}}
+  />
 
   <label>
     Start date:
