fix userSelector component

--- a/app/home/posts/template.hbs
+++ b/app/home/posts/template.hbs
@@ -3,7 +3,7 @@
 
 <div class='d-flex justify-content-between'>
   <Shared::UserSelector
-    @multipleType='true'
+    @multipleType={{true}}
     @selected={{this.selectedAuthors}}
     @onChange={{this.chooseAuthors}}
   />
