add new test for users

--- a/app/components/users/list/template.hbs
+++ b/app/components/users/list/template.hbs
@@ -8,16 +8,16 @@
     </tr>
   </thead>
   <tbody>
-    {{#each @model as |user|}}
+    {{#each @users as |user index|}}
       <tr>
-        <td>{{user.id}}</td>
-        <td>
+        <td data-test-id={{index}}>{{user.id}}</td>
+        <td data-test-username={{index}}>
           <LinkTo @route='home.user.show' @model={{user}}>
             {{user.username}}
           </LinkTo>
         </td>
-        <td>{{user.password}}</td>
-        <td>{{user.email}}</td>
+        <td data-test-password={{index}}>{{user.password}}</td>
+        <td data-test-email={{index}}>{{user.email}}</td>
       </tr>
     {{/each}}
   </tbody>
