--- a/app/home/users/template.hbs
+++ b/app/home/users/template.hbs
@@ -1,5 +1,4 @@
 {{page-title 'Users'}}
 <Header>users</Header>
-<Users::List @model={{this.model}} />
-
+<Users::List @users={{this.model}} />
 {{outlet}}
