--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,6 +1,6 @@
 {{page-title 'Login'}}
 
-><div class='container'>
+<div class='container'>
   <form {{on 'submit' this.onSubmit}}>
     <div class='mb-3 row'>
       <label for='username' class='col-sm-2 col-form-label'>Username</label>
@@ -30,12 +30,21 @@
       </div>
     </div>
     <div class='mb-3 row'>
-      <button type='submit' class='btn btn-primary'>ZALOGUJ</button>
+      <button type='submit' class='btn btn-primary'>Zaloguj</button>
     </div>
   </form>
   <div>
     <span>Nie mam konta. </span><LinkTo @route='register'>Zarejestruj</LinkTo>
   </div>
-</div>
 
+  <div class='mb-3 row'>
+
+    <button
+      type='button'
+      class='btn btn-primary'
+      {{on 'click' this.on0AuthLoginOrRegister}}
+    >Zaloguj przez konto google</button>
+  </div>
+
+</div>
 {{outlet}}
